--- a/Assignment1/css/grayscale.css
+++ b/Assignment1/css/grayscale.css
@@ -12,16 +12,13 @@ body {
     background-color: #000;
 }
 
-#canvas {
-    background-color: #000;
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
-    margin: 100px;
-    padding: 0px;
-    position: static; /* fixed or static */
-    top: 100px;
-    left: 100px;
+#myCanvas {
+   width: 100%;
+   text-align:center;
+}
+
+canvas {
+   display: inline;
 }
 
 html {
