Added sound effects and combined the javascript, next step adding text, should also edit the sound effect files

--- a/Assignment1/css/grayscale.css
+++ b/Assignment1/css/grayscale.css
@@ -15,10 +15,12 @@ body {
 #myCanvas {
    width: 100%;
    text-align:center;
+   border:1px solid #000000;
 }
 
 canvas {
    display: inline;
+   border:1px solid #FFF;
 }
 
 html {
