So i fonud out my adding to divs never actually did the correct thing, so made some boogie hardcoded layout

--- a/Assignment3/css/grayscale.css
+++ b/Assignment3/css/grayscale.css
@@ -18,6 +18,12 @@ body {
    border:1px solid #000000;
 }
 
+#myCanvasLeft {
+   width: 100%;
+   padding-left: 100px;
+   border:1px solid #000000;
+}
+
 canvas {
    display: inline;
    border:1px solid #FFF;
