--- a/Assignment3/css/grayscale.css
+++ b/Assignment3/css/grayscale.css
@@ -4,6 +4,10 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+ .dg .cr.function .property-name {
+ 	width: 100%;
+ }
+
 body {
     width: 100%;
     height: 100%;
